modules/networking/igw.tf

# Create IGW
resource "aws_internet_gateway" "main" {
  vpc_id =aws_vpc.main.id 
}
