modules/networking/vpc.tf
#Create VPC
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  tags = var.vpc_tags
}
